tests/src/frontend/typechecking/exhaustiveness/invalid/non_nested_invalid_child.sk
base class A {
  children =
  | X()
  | Y()
}
fun test(): String {
  X() match {
  | Y() -> "Fail\n"
  }
}
